@@ -1,6 +1,6 @@
 
-		 Release notes for OpenPAM Resedacea
-		 ===================================
+		  Release notes for OpenPAM Tabebuia
+		  ==================================
 
 OpenPAM is developed primarily on FreeBSD, but is expected to work on
 almost any POSIX-like platform that has GNU autotools, GNU make and
